<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:text="@tools:sample/lorem[7]" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/txtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                tools:text="@tools:sample/lorem[7]" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_value" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perform_this_action_via_shortcut" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
