<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true"
                android:textStyle="normal"
                tools:text="@tools:sample/lorem[2]" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_help"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/help"
                android:text="@null"
                app:icon="@drawable/ic_outline_help_outline_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="30dp"
                app:iconTint="?attr/colorAccent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textIsSelectable="true"
                tools:text="@tools:sample/lorem[7]" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lock_value" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perform_this_action_via_shortcut" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
